crates/glyph-cli/tests/corpus/invalid/case-violation/skill_pascal_case.glyph
skill MyInstall()
    description: "Pascal-case skill name is illegal."
    flow:
        return <"x">
